<resources>
    <string name="app_name">"GasOnMap"</string>
    <string name="email">"E-mail"</string>
    <string name="email_field_hint">"E-mail"</string>
    <string name="password">"Senha"</string>
    <string name="password_field_hint">"Senha"</string>
    <string name="name">"Nome"</string>
    <string name="name_field_hint">Nome</string>
    <string name="confirm_password_field_hint">"Confirme a senha"</string>
    <string name="login_button">"Login"</string>
    <string name="register_button">"Registro"</string>
    <string name="registerBtn">Criar conta</string>
    <string name="forgotBtn">"Esqueci minha senha"</string>

    <string name="register">"Ainda não é registrado?"</string>
    <string name="forgotten_password">"Não consegue acessar?"</string>
    <string name="send_button">"Enviar"</string>
    <string name="text_forgot_password">"Esqueceu sua senha?\nNão se preocupe!\nPodemos ajudá-lo!"</string>
    <string name="title_activity_maps">Map</string>
    <color name="bg_color">#ffffff</color>
    <string name="id">ID</string>
</resources>
