<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">
    <!--Email Input-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameRegisterEditText"
        android:layout_marginTop="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/name_field_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailRegisterEditText"
        android:hint="@string/email_field_hint"
        android:layout_below="@+id/nameRegisterEditText"
        android:layout_alignLeft="@+id/nameRegisterEditText"
        android:layout_alignStart="@+id/nameRegisterEditText" />
    <!--Password Input-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordRegisterEditText"
        android:password="true"
        android:hint="@string/password_field_hint"
        android:layout_below="@+id/emailRegisterEditText"
        android:layout_alignLeft="@+id/nameRegisterEditText" />
    <!--Login Button-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirmPasswordRegisterEditText"
        android:password="true"
        android:hint="@string/confirm_password_field_hint"
        android:layout_below="@+id/passwordRegisterEditText"
        android:layout_alignLeft="@+id/nameRegisterEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:id="@+id/sendRegisterButton"
        android:layout_below="@+id/confirmPasswordRegisterEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/linkToLoginButton"
        android:layout_below="@+id/sendRegisterButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

</RelativeLayout>
