<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ForgotPasswordActivity">
    <!--Email Input-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textForgotPassword"
        android:layout_marginTop="46dp"
        android:text="@string/text_forgot_password"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailForgotEditText"
        android:hint="@string/email_field_hint"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button"
        android:id="@+id/sendForgotButton"
        android:layout_marginTop="62dp"
        android:layout_below="@+id/emailForgotEditText"
        android:layout_alignLeft="@+id/emailForgotEditText"
        android:layout_alignStart="@+id/emailForgotEditText"
        android:layout_alignRight="@+id/emailForgotEditText"
        android:layout_alignEnd="@+id/emailForgotEditText" />

</RelativeLayout>
